# SmartBriteHardware

./: Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: ble.rs  button.rs  led.rs  lib.rs  light.rs  main.rs  store.rs  timer.rs
src/store/: mod.rs  scene.rs  time_task.rs
src/transmission/: meta_date.rs  mod.rs  msg.rs
