[package]
name = "smart-brite"
version = "0.1.0"
authors = ["yexiyue <yexiyue666@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "smart-brite"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
anyhow = "1.0.86"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
rgb = { version = "0.8.48", features = ["serde"] }
esp32-nimble = { version = "0.7.0", features = ["debug"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
rand = "0.8.5"

[build-dependencies]
embuild = "0.32.0"
